@@ -1,13 +1,13 @@
 {
-  "timestamp" : "2022-12-01T16:26:12Z",
+  "timestamp" : "2022-12-02T08:20:59Z",
   "count_outdated" : 250,
   "uniques_outdated" : 92,
-  "count" : 265,
+  "count" : 264,
   "uniques" : 102,
   "clones" : [
     {
       "timestamp": "2022-11-18T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
