@@ -1,3 +1,11 @@
+2022-12-02T08:20:59Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3600050072 # 281
+* notice: last 14d: unq all: 2 14
+* notice: prev accum: outdated-unq outdated-all / unq all: 92 250 / 102 265
+* notice: next accum: outdated-unq outdated-all / unq all: 92 250 / 102 264
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -1 / +1 +2 -0 -1 / 1 1
+* notice: removed / changed dates: [] / [2022-11-18]
+
 2022-12-01T16:26:12Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3594510727 # 279
 * notice: last 14d: unq all: 2 15
